cfn_benchmark/cfn_templates/luyomo__OhMyTiUP/embed/templates/cloudformation/postgres.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
     The template is used to deploy postgres
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "Meta Configuration"
        Parameters:
          - InstanceType
          - AuroraFamily
          - Engine
          - EngineVersion
          - DBSize
          - VpcCidr
          - PubliclyAccessibleFlag
          - SingleMode
          - Username
          - Password
Parameters:
  InstanceType:
    Description: RDS instance type
    Type: String
    Default: db.r5.2xlarge
    AllowedValues:
    - db.r5.large
    - db.r5.xlarge
    - db.r5.2xlarge
    - db.r5.4xlarge
    - db.r5.8xlarge
    - db.r5.12xlarge
    - db.r5.16xlarge
    - db.r5.24xlarge
    ConstraintDescription: must be a valid rdb instance type
  VpcCidr:
    Type: String
    Default: 172.83.0.0/16
    Description: The cidr of RDB
  AuroraFamily:
    Description: Postgres family
    Type: String
    Default: postgres11
    AllowedValues:
    - postgres10
    - postgres11
    - postgres12
    - postgres13
    ConstraintDescription: Approriate postgres parameter
  Engine:
    Type: String
    Default: postgres
    AllowedValues:
      - postgres
  EngineVersion:
    Type: String
    Default: "11.14"
    AllowedValues:
      - "11.14"
  Password:
    Type: String
    Description: The password of RDB
  Username:
    Type: String
    Description: The username for RDB
  DBSize:
    Type: Number
    Default: 20
    Description: The disk size of the DB
  PubliclyAccessibleFlag:
     Description: Public accessible
     Type: String
     Default: false
     AllowedValues:
       - true
       - false
  SingleMode:
     Description: Single mode or master-slave mode
     Type: String
     Default: true
     AllowedValues:
       - true
       - false

Conditions:
  IsPublic: !Equals
    - !Ref PubliclyAccessibleFlag
    - true
  IsMasterSlave: !Equals
    - !Ref SingleMode
    - false

Resources:
  auroraMySQLVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: VpcCidr
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'

  theInternetGateway:
    Type: AWS::EC2::InternetGateway
    Condition: IsPublic

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Condition: IsPublic
    Properties:
      InternetGatewayId:
        Ref: theInternetGateway
      VpcId:
        Ref: auroraMySQLVPC

  auroraMySQLSubnet01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: auroraMySQLVPC
      CidrBlock: !Select [ 0, !Cidr [ !Ref VpcCidr, 12, 8  ]  ]
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'

  auroraMySQLSubnet02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: auroraMySQLVPC
      CidrBlock: !Select [ 1, !Cidr [ !Ref VpcCidr, 12, 8  ]  ]
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'

  auroraMySQLRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: auroraMySQLVPC

  publicRoute:
    Condition: IsPublic
    Type: AWS::EC2::Route
    DependsOn:
      - auroraMySQLRT
      - theInternetGateway
    Properties:
       RouteTableId:
         Ref: auroraMySQLRT
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: theInternetGateway

  auroraMySQLSubnetRouteTableAssociation01:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: auroraMySQLSubnet01
      RouteTableId:
        Ref: auroraMySQLRT

  auroraMySQLSubnetRouteTableAssociation02:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: auroraMySQLSubnet02
      RouteTableId:
        Ref: auroraMySQLRT

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow DB access from client
      VpcId:
        Ref: auroraMySQLVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 5432
        ToPort: 5432
        CidrIp: 0.0.0.0/0

        #  PGSecurityGroup:
        #    Type: AWS::RDS::DBSecurityGroup
        #    Properties:
        #      GroupDescription: Allow DB access from client
        #      EC2VpcId:
        #        Ref: auroraMySQLVPC
        #      DBSecurityGroupIngress:
        #      -
        #        EC2SecurityGroupId:
        #          Ref: InstanceSecurityGroup

  auroraMySQLDBSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupDescription: description
      SubnetIds:
        - Ref: auroraMySQLSubnet01
        - Ref: auroraMySQLSubnet02

  RDSDBParameterGroup:
    Type: 'AWS::RDS::DBParameterGroup'
    Properties:
      Description: CloudFormation Sample Aurora Parameter Group
      Family:
        Ref: AuroraFamily
      Parameters:
        rds.logical_replication: true

  RDSDBInstance1:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceIdentifier: !Ref AWS::StackName
      PubliclyAccessible: !Ref PubliclyAccessibleFlag
      VPCSecurityGroups:
         - Ref: InstanceSecurityGroup
      DBSubnetGroupName:
        Ref: auroraMySQLDBSubnetGroup
      DBInstanceClass:
        Ref: InstanceType
      AllocatedStorage: !Ref DBSize
      DBParameterGroupName:
        Ref: RDSDBParameterGroup
      Engine:
        Ref: Engine
      EngineVersion:
        Ref: EngineVersion
      MasterUserPassword:
        Ref: Password
      MasterUsername:
        Ref: Username
      PubliclyAccessible:
        Ref: PubliclyAccessibleFlag

        #  RDSDBInstance2:
        #    Type: AWS::RDS::DBInstance
        #    Properties:
        #      DBInstanceIdentifier: slavedb
        #      SourceDBInstanceIdentifier: masterdb
        #      PubliclyAccessible: !Ref PubliclyAccessibleFlag
        #      VPCSecurityGroups:
        #         - Ref: InstanceSecurityGroup
        #      DBSubnetGroupName:
        #        Ref: auroraMySQLDBSubnetGroup
        #      DBInstanceClass:
        #        Ref: InstanceType
        #      AllocatedStorage: 10
        #      DBParameterGroupName:
        #        Ref: RDSDBParameterGroup
        #      Engine:
        #        Ref: Engine
        #      EngineVersion:
        #        Ref: EngineVersion
        #      PubliclyAccessible:
        #        Ref: PubliclyAccessibleFlag
